@@ -1,4 +1,4 @@
 DIST FreeGo4-src.zip 2071364 RMD160 8e36c44019a77159dd8cd08a32c1ba3be64fc661 SHA1 af53ac95946bb049a721c2c64484b74bc28d665a SHA256 5bee85363e9de4bb4fcfca53356fb1844d719c612e50a34c2689a3a56c5c9994
-EBUILD freego-4.ebuild 725 RMD160 4256f02b68b2dabb88218051f150f6753a907d28 SHA1 d15711bdc07b4dfedb72b68298b5439cec73b14f SHA256 685df613f1956ad04e1c147c15626c9fa6dacc595a03ee66e3b8affd38bfa1a6
-MISC ChangeLog 410 RMD160 aeb475a0a39fe8cc690f7a71d11d92199b6ac68b SHA1 5e90eae4875fc8f2cdbb268e283e07818fbc6d7b SHA256 1fb03c21caf38ddb49d6cd32c9407bab0e0d3de31af3c96bb381852ee547f4f5
+EBUILD freego-4.ebuild 708 RMD160 7d11dfe7080d489bbb4b6a26622da0f419f9ffe3 SHA1 1b2f42bfd58614def24399ba8d44e76d8f7a62e5 SHA256 8048138c04c13a5221bea1963010fdcfce056492eeec60b7165b11e31dfbda37
+MISC ChangeLog 564 RMD160 244f0f7658e157212aecfb11f985e8777bab1b63 SHA1 8e225723786f8eb377f516b99e18d65b4938ce62 SHA256 708fecfdf00cdeb6ced531081f3f9f10ea0f4910b3cd6570685fc2d28515db0d
 MISC metadata.xml 171 RMD160 ed284df01c230fc7990a6b5888b39166d23f29ba SHA1 f3d64a69044b710e23fb874b3ee4cd338858c8b4 SHA256 a7b30fbacd0e4c312c07a3efac112a3794c81d134442d8104325734d03425adf
