@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  18 Mar 2010; Christophe LEFEBVRE (chtof) <chtof62@gmail.com>
+  freego-4.ebuild:
+  ~amd64 keyword added and some other fixes. Thanks to Binki and Tommy
+
   11 Jan 2010; Christophe LEFEBVRE (chtof) <chtof62@gmail.com> metadata.xml:
   metadata.xml corrected. Thanks to Tommy
 
